[package]
name = "httpie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"  # 错误处理
clap = "4.5.53" # 命令行解析
colored = "3.0.0" # 颜色输出
jsonxf = "1.1.1" # JSON 格式化输出
mime = "0.3.17" # MIME 类型处理
reqwest = {version = "0.12.24",features = ["json"]} # HTTP 请求库
tokio = {version = "1.48.0",features = ["full"]} # 异步运行时
# reqwest = {version = "0.11",features = ["json"]} # HTTP 请求库 old
# tokio = {version = "1",features = ["full"]} # 异步运行时 old
